# pyre2

./: .buildinfo  .gitignore  .gitmodules  CHANGELOG.html  CMakeLists.txt  MANIFEST.in  Makefile  README.html  README.rst  environment.devenv.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  search.html  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  conda-dev.yml  conda.yml  main.yml  release.yml  wheels.yml
_modules/: index.html
_static/: documentation_options.js
api/: modules.html  re2.html
cmake/: libre2sub.cmake
cmake/modules/: FindCython.cmake
conda.recipe/: meta.yaml
src/: CMakeLists.txt  re2.pyx
tests/: performance.py  re_utils.py  test_emptygroups.txt  test_emptygroups_none.txt  test_re.py
