[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython~=0.29.30",
    "pybind11>=2.7.1",
    "ninja; sys_platform != 'win32' and platform_machine != 'arm64'",
    "cmake>=3.15",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.2.5"
testpaths = [
    "tests",
]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
markers = "subscript"
norecursedirs= [
    ".*", "*.egg*", "build", "dist", "conda-recipe",
]
addopts = [
    "--strict-markers",
    "--tb=native",
    "-ra",
]

[tool.coverage.run]
plugins = ["Cython.Coverage"]
branch = true
source = ["src"]
omit = ["tests", ".tox"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
#fail_under = 50
show_missing = true
omit = ["tests", ".tox"]

[tool.black]
line-length = 84
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
