[metadata]
name = pyre2
author = Andreas van Cranenburgh
author_email = andreas@unstable.nl
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = Python wrapper for Google\'s RE2 using Cython
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/andreasvc/pyre2
license = BSD
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6

zip_safe = False

[options.extras_require]
test =
    pytest
    pytest-cov

cov =
    coverage

perf =
    regex

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitchangelog.rc
    .coveragerc
    .gitignore
    conda/**

[flake8]
# these error codes interfere with Black
ignore = E203, E231, E501, W503, B950, W605, E402
#select = C,E,F,W,B,B9
max-line-length = 84
filename = *.py,*.pyx,*.pxi,*.pxd
exclude = .eggs,*.egg,build,extern,doc/source/gettingstarted/examples
select = E,F,W
#ignore = E203,E225,E226,E227,E741,E999,W503,W504

[egg_info]
tag_build =
tag_date = 0
