[metadata]
name = pyre2
author = Andreas van Cranenburgh
author_email = andreas@unstable.nl
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = Python wrapper for Google RE2 library using Cython
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/andreasvc/pyre2
license = BSD
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Cython
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6

zip_safe = False

[options.extras_require]
test =
    pytest
    pytest-cov

cov =
    cython
    coverage
    cython-coverage
    coverage_python_version

perf =
    regex

[aliases]
test=pytest

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitchangelog.rc
    .coveragerc
    .gitignore
    conda/**

[flake8]
# these error codes interfere with Black
#ignore = E203, E231, E501, W503, B950,
ignore = E225,E226,E227,E402,E703,E999
max-line-length = 105
filename = *.pyx, *.px*
exclude = .git, .eggs, *.egg, .tox, build
